--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script>
+    geotab.adding.assetProvision = function (api, state) {
+        console.log('variabe assignemend')
+        return {
+                initialize: function(api, state, callback) {
+                  console.log(init)
+                    callback();
+                },
+                focus: function(api, state) {
+                   console.log('focus')
+                },
+                blur: function(api, state) {
+                  console.log('blur')
+                }
+            }
+    }
+  </script>
 </head>
 <body class="mat-typography">
   <div app-root></div app-root>
