fixed namespace error

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script>
-    geotab.adding.myRideViewAssetProvision = function (api, state) {
+    geotab.addin.myRideViewAssetProvision = function (api, state) {
         console.log('variabe assignemend')
         return {
                 initialize: function(api, state, callback) {
