fixed namespace error

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         console.log('variabe assignemend')
         return {
                 initialize: function(api, state, callback) {
-                  console.log(init)
+                  console.log('init')
                     callback();
                 },
                 focus: function(api, state) {
