--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,11 @@
   <script>
     geotab.addin.myRideViewAssetProvision = function (api, state) {
         console.log('variabe assignemend')
+        console.log(document.getElementById('root'))
         return {
                 initialize: function(api, state, callback) {
                   console.log('init')
+                  console.log(document.getElementById('root'))
                     callback();
                 },
                 focus: function(api, state) {
@@ -28,6 +30,6 @@
   </script>
 </head>
 <body class="mat-typography">
-  <div app-root></div app-root>
+  <div app-root id="root"></div app-root>
 </body>
 </html>
